--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,19 +20,19 @@
 
 @layer base {
   body {
-    @apply bg-secondary overflow-hidden leading-relaxed;
+    @apply bg-secondary   overflow-hidden leading-relaxed;
   }
   .page {
-    @apply w-full h-screen overflow-hidden;
+    @apply w-full  box-border h-screen overflow-hidden;
   }
   .h1 {
-    @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
+    @apply text-[35px] leading-tight md:text-[40px] md:leading-[1.3] mb-8 font-semibold;
   }
   .h2 {
-    @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
+    @apply text-[20px] xl:mt-16 leading-tight md:text-[40px] md:leading-[1.3] mb-4 font-semibold;
   }
   p {
-    @apply leading-[1.8] text-white/60 font-light;
+    @apply leading-[1.4] text-white/60 font-light;
   }
   .btn,
   .input {
@@ -48,4 +48,6 @@
   .textarea {
     @apply w-full h-[180px] p-6 capitalize rounded-lg resize-none;
   }
+
+  
 }
